@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+November 8, 2011
++ [mickael] WIP: clean and enhance openjpeg.h and add deprecated macro
+
 October 25, 2011
 + [mickael] WIP: add a file to exclude some valgrind errors (detected with ctest_memcheck) related to png lib found with ubuntu10.04 platform 
 * [mickael] WIP: solve problems with reading of elements outside the tilec->data buffer in dwt
